# squeezed

./: Makefile  _oasis  _tags  setup.ml  xapi-squeezed.opam
lib/: META  jbuild  squeeze.ml
src/: jbuild  memory_server.ml  squeeze_xen.ml  squeezed.ml  squeezed_state.ml  squeezed_xenstore.ml
test/: jbuild  squeeze_test.ml
