opam-version: "1"
maintainer: "dave.scott@eu.citrix.com"

build: [
  "jbuilder" "build" "-p" name "-j" jobs
]

build-test: ["jbuilder" "runtest" "-p" name]

depends: [
  "xapi-stdext"
  "jbuilder" {build}
  "uuidm"
  "cohttp" {>= "0.11.0"}
  "uri"
  "re"
  "rpc"
  "xapi-idl"
  "xenstore"
  "xenstore_transport"
  "xenctrl" {>= "0.9.20"}
]
